[package]
name = "pushgit"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A tool to commit code to git repository and record development logs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
git2 = "0.18"
anyhow = "1.0"
dialoguer = "0.11"
colored = "2.0"
encoding_rs = "0.8"
termsize = "0.1"
