[package]
name = "pushgit"
version = "0.1.0"
edition = "2021"
authors = ["iisyw"]
description = "A tool to commit code to git repository and record development logs"
license = "MIT"
repository = "https://github.com/iisyw/PushGit"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
git2 = "0.18"
anyhow = "1.0"
dialoguer = "0.11"
colored = "2.2"
encoding_rs = "0.8"
termsize = "0.1"
rustyline = "12.0.0"
